--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,41 +12,36 @@ jobs:
 
     services:
       postgres:
-        image: postgres:14
+        image: postgres:13
         env:
-          POSTGRES_USER: user
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: gallery_db
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: test_db
         ports:
           - 5432:5432
         options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          --health-cmd="pg_isready"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pillow  # вдруг ты не добавил это в requirements.txt
 
-      - name: Run migrations
-        env:
-          DATABASE_URL: postgres://user:password@localhost:5432/gallery_db
-        run: |
-          python manage.py migrate
-
-      - name: Run tests
-        env:
-          DATABASE_URL: postgres://user:password@localhost:5432/gallery_db
-        run: |
-          python manage.py test gallery
+    - name: Run tests
+      env:
+        DATABASE_URL: postgres://postgres:postgres@localhost:5432/test_db
+      run: |
+        python manage.py migrate
+        python manage.py test
